Add the VS project

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
-#Sarbian doesn't like the build scripts:
+SmokeScreen-Unity/*
 *.sln
-*.csproj
-*.vcxproj
-*.vcxproj.filters
 
 #OS junk files
 [Tt]humbs.db
